--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   db:
     image: mysql:8
     environment:
-      MYSQL_DATABASE: AS1
+      MYSQL_DATABASE: assignment1
       MYSQL_ROOT_PASSWORD: root
       MYSQL_USER: user
       MYSQL_PASSWORD: password
