--- a/nginx.conf
+++ b/nginx.conf
@@ -6,7 +6,7 @@ server {
     index index.php index.html index.htm;
 
     location / {
-        try_files $uri $uri/ /index.php =404;
+        try_files $uri $uri/ =404;
     }
 
     location ~ \.php$ {
